WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59640
Fix five strict PassOwnPtr violations in WebCore
https://bugs.webkit.org/show_bug.cgi?id=59640
Summary
Fix five strict PassOwnPtr violations in WebCore
Adam Barth
Reported
2011-04-27 15:12:41 PDT
Fix five strict PassOwnPtr violations in WebCore
Attachments
Patch
(10.89 KB, patch)
2011-04-27 15:14 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-04-27 15:14:06 PDT
Created
attachment 91357
[details]
Patch
WebKit Commit Bot
Comment 2
2011-04-27 23:08:28 PDT
Comment on
attachment 91357
[details]
Patch Clearing flags on attachment: 91357 Committed
r85162
: <
http://trac.webkit.org/changeset/85162
>
WebKit Commit Bot
Comment 3
2011-04-27 23:08:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug